[gd_scene load_steps=11 format=2]

[ext_resource path="res://MetaBoy/Projectiles/Dynamite/DynamiteProjectile.png" type="Texture" id=1]
[ext_resource path="res://MetaBoy/Projectiles/ExplosionParticles.tscn" type="PackedScene" id=2]
[ext_resource path="res://MetaBoy/Projectiles/Dynamite/dynamite_explode.wav" type="AudioStream" id=3]
[ext_resource path="res://MetaBoy/Projectiles/Dynamite/Dynamite.gd" type="Script" id=4]

[sub_resource type="CapsuleShape2D" id=4]
radius = 4.0
height = 16.1563

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Weapon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "burning"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Weapon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=5]
resource_name = "explode"
tracks/0/type = "value"
tracks/0/path = NodePath("ExplosionParticles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="CircleShape2D" id=8]
radius = 36.0

[sub_resource type="AudioStreamRandomPitch" id=7]
audio_stream = ExtResource( 3 )
random_pitch = 1.25

[node name="Dynamite" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -0.455081
shape = SubResource( 4 )

[node name="Weapon" type="Sprite" parent="."]
position = Vector2( -5, -3 )
texture = ExtResource( 1 )
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/burning = SubResource( 3 )
anims/explode = SubResource( 5 )

[node name="ExplosionParticles" parent="." instance=ExtResource( 2 )]

[node name="ExplosionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea"]
shape = SubResource( 8 )

[node name="ExplodeSound" type="AudioStreamPlayer" parent="."]
stream = SubResource( 7 )
volume_db = -5.0
